# ai-query

./: .gitignore  CHANGELOG.md  README.md  TRANSPORT_PLAN.md  main.py  page.svelte  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
.semversioner/: 1.6.4.json  1.7.0.json  1.7.1.json  1.7.10.json  1.7.11.json  1.7.12.json  1.7.13.json  1.7.14.json  1.7.15.json  1.7.16.json  1.7.17.json  1.7.18.json  1.7.19.json  1.7.2.json  1.7.20.json  1.7.21.json  1.7.22.json  1.7.23.json  1.7.24.json  1.7.25.json  1.7.26.json  1.7.27.json  1.7.28.json  1.7.29.json  1.7.3.json  1.7.30.json  1.7.31.json  1.7.32.json  1.7.33.json  1.7.34.json  1.7.35.json  1.7.36.json  1.7.37.json  1.7.38.json  1.7.39.json  1.7.4.json  1.7.40.json  1.7.41.json  1.7.42.json  1.7.43.json  (+24 more)
ai_query/: __init__.py  core.py  model.py  types.py
battletests/: test_distributed_workflow.py
docs/: README.md  assignment_ssh_key  assignment_ssh_key.pub  critique.md  docs.json  index.mdx  providers.mdx  quickstart.mdx
examples/: README.md  agent_direct.py  cloudflare_worker.py  code_executor.py  complete-multi-agent-setup.mdx  country_explorer.py  fastapi_realtime.py  hackernews_agent.py  multi_agent_research.py  multi_provider.py  openai_reasoning.py  rpc_agent.py  rpc_client.py  sse_client.py  task_planner.py  unit_converter.py  wikipedia_agent.py
tests/: conftest.py  test_agent.py  test_agent_server_turn_events.py  test_concurrency_start.py  test_event_replay.py  test_fastapi_adapter.py  test_faux_provider.py  test_generate_text.py  test_providers.py  test_remote_turn_events.py  test_router.py  test_rpc.py  test_sse_replay.py  test_storage.py  test_stream_text.py  test_termination.py  test_tls_transport.py  test_tool_execution_context.py  test_tool_output.py  test_transport.py  test_turn_codec.py  test_types.py  verify_cloudflare_logic.py
(+271 files in other folders)
