[project]
name = "ai-query"
version = "0.0.1"
description = "A unified Python SDK for querying AI models from multiple providers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "semversioner>=2.0.8",
]
