[project]
name = "ai-query"
version = "1.0.0"
description = "A unified Python SDK for querying AI models from multiple providers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.9.0"]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/Abdulmumin1/ai-query"
Repository = "https://github.com/Abdulmumin1/ai-query"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "semversioner>=2.0.8",
]
