[project]
name = "ai-query"
version = "1.7.6"
description = "A unified Python SDK for querying AI models from multiple providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
]

license = { file = "LICENSE" }

[project.optional-dependencies]
mcp = ["mcp>=1.25.0"]
bedrock = ["boto3>=1.34.0"]
fastapi = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
pydantic = ["pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/Abdulmumin1/ai-query"
Repository = "https://github.com/Abdulmumin1/ai-query"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "semversioner>=2.0.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.1.0",
    "mcp>=1.26.0",
]
